--- a/src/pages/List/styles.css
+++ b/src/pages/List/styles.css
@@ -182,6 +182,17 @@ input {
   color: #555;
 }
 
+.input--style-6 {
+  background: #e5e5e5;
+  line-height: 50px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  padding: 0 22px;
+  font-size: 16px;
+  color: #555;
+}
+
 .input-group-desc {
   position: relative;
 }
