--- a/src/pages/List/styles.css
+++ b/src/pages/List/styles.css
@@ -8,8 +8,7 @@
 
 .botaoCadastrar{
   background-color: #4272d7;
-  margin-right: 10px;
-  align-self: center;
+  margin-bottom: 10px;
   font-size: 15px;
   text-transform: uppercase;
   font-weight: 700;
@@ -54,11 +53,19 @@
   }
 }
 
-.header {
-  padding: 20px 0;
+.Header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background: #ffcf4f;
   height: auto;
   min-height: 150px;
+}
+
+.logo{
+  margin-top: 0;
+  height: 50vh;
+  width: auto;
 }
 
 .card {
