--- a/src/pages/List/styles.css
+++ b/src/pages/List/styles.css
@@ -192,12 +192,16 @@ input {
 .input--style-6 {
   background: #e5e5e5;
   line-height: 50px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
   padding: 0 22px;
   font-size: 16px;
   color: #555;
+  border-top-left-radius: 5px ;
+  border-bottom-left-radius: 5px ;
+}
+
+.radiusRight {
+  border-top-right-radius: 5px ;
+  border-bottom-right-radius: 5px ;
 }
 
 .input-group-desc {
