Correção de interface

--- a/src/pages/OngShow/Pages/Desktop/styles.sass
+++ b/src/pages/OngShow/Pages/Desktop/styles.sass
@@ -97,18 +97,19 @@ body
     display: flex
     justify-content: center
 
-
 .iconButton
-    min-height: 50
-    min-hidth: 50
-    height: 50
-    width: 50
-    margin: 10
+    min-height: 45px !important
+    min-width: 45px !important
+    height: 45px !important
+    width: 45px !important
+    margin: 10px !important
 
 .facebookBorder
-    border-color: #3b5998
+  border-color: #3b5998 !important
 
-
+.picPayBorder
+  border-color: #11C76F !important
+  
 .center
     display: flex
     flex-direction: column
