--- a/src/pages/OngShow/Pages/Desktop/styles.sass
+++ b/src/pages/OngShow/Pages/Desktop/styles.sass
@@ -23,6 +23,8 @@ body
 .ong
     background-color: #ffff
     min-height: 80%
+    max-height: 90%
+    overflow: auto
     width: 70%
     display: flex
 
