--- a/src/pages/Register/styles.css
+++ b/src/pages/Register/styles.css
@@ -364,8 +364,8 @@
     margin: 0 auto;
   }
   
-  .wrapper--w960 {
-    max-width: 960px;
+  .wrapper-width {
+    max-width: 1200px;
   }
   
   .wrapper--w790 {
@@ -428,11 +428,20 @@
   .btn--blue {
     background: #4272d7;
   }
-  
+
   .btn--blue:hover {
     background: #3868cd;
   }
+
+  .btn--yellow {
+    background: #ffc019;
+  }
+
+  .btn--yellow:hover {
+    background: #ffc52d;
+  }
   
+
   .btn--red {
     background: #ff4b5a;
   }
