--- a/src/pages/List/styles.css
+++ b/src/pages/List/styles.css
@@ -6,7 +6,7 @@
   border-radius: 400px;
 }
 
-.botaoCadastrar{
+/* .botaoCadastrar{
   background-color: #4272d7;
   margin-bottom: 10px;
   font-size: 15px;
@@ -16,7 +16,7 @@
   font-family: Poppins;
   padding: 0 50px;
   line-height: 50px;
-}
+} */
 
 .card-5 .card-body {
   padding: 52px 85px;
