--- a/src/components/BacktoTop/styles.css
+++ b/src/components/BacktoTop/styles.css
@@ -1,27 +1,7 @@
-.scrollTop {
-    z-index: 1000;
-    cursor: pointer;
-    animation: fadeIn 0.3s;
-    transition: opacity 0.4s;
-    opacity: 0.5;
-  }
-  
-  .scrollTop:hover{
-    opacity: 1;
-  }
-  
-  @keyframes fadeIn {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 0.5;
-    }
-  }
-  .button-box{
+  .button-box {
     background-color: white;
-    box-shadow:0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    position: fixed; 
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    position: fixed;
     display: flex;
     width: 4%;
     bottom: 20px;
@@ -30,7 +10,7 @@
     align-self: flex-end;
     right: 7%;
     height: 40px;
-    justify-content:center;
+    justify-content: center;
     z-index: 1000;
     cursor: pointer;
     animation: fadeIn 0.3s;
@@ -39,6 +19,28 @@
     border-radius: 4px;
   }
 
-  .button-box:hover{
+  .button-box:hover {
     opacity: 1;
+  }
+
+  .button-box .upIcon {
+    z-index: 1000;
+    cursor: pointer;
+    animation: fadeIn 0.3s;
+    transition: opacity 0.4s;
+    opacity: 0.5;
+    height: 40;
+  }
+
+  .button-box .upIcon:hover {
+    opacity: 1;
+  }
+
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 0.5;
+    }
   }
