--- a/src/components/BacktoTop/styles.css
+++ b/src/components/BacktoTop/styles.css
@@ -3,13 +3,13 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     position: fixed;
     display: flex;
-    width: 4%;
-    bottom: 20px;
+    width: 2em;
+    height: 2em;
+    bottom: 30px;
     float: right;
     align-items: center;
     align-self: flex-end;
     right: 7%;
-    height: 40px;
     justify-content: center;
     z-index: 1000;
     cursor: pointer;
@@ -29,7 +29,7 @@
     animation: fadeIn 0.3s;
     transition: opacity 0.4s;
     opacity: 0.5;
-    height: 40;
+    height: 1.5em;
   }
 
   .button-box .upIcon:hover {
