--- a/src/pages/Login/styles.css
+++ b/src/pages/Login/styles.css
@@ -6,27 +6,27 @@
 }
 
   .loginBox {
-    margin-top: 35px;
     background-color: #ffcf4f;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 15px;
     display: flex;
     flex-direction: column;
     position: relative;
-    margin-top: 50px;
 }
 
   .loginText {
     color: #FFFFFF;
     display: flex;
-    font-family: Roboto, sans-serif;
+    font-family: Poppins;
     font-style: normal;
-    font-weight: normal;
     font-size: 32px;
     justify-content: center;
     align-items: center;
     text-align: center;
     margin-bottom: 15px;
+    font-size: 15px;
+    text-transform: uppercase;
+    font-weight: 700;
 }
 
   .usuario{
@@ -43,14 +43,45 @@
 
   .botaoentrar {
     border: 1px solid rgba(0, 0, 0, 0.12);
+    justify-content: center;
+    align-items: center;
+    padding-top: 20px;
+    text-align: center;
+    background-color: #4272d7;
     box-sizing: border-box;
     border-radius: 2px;
     margin-top: 10px;
-    font-weight: 500;
+    font-weight: 700;
+    font-size: 20px;
+    font-family: Poppins;
     line-height: 16px;
     letter-spacing: 0.02em;
     text-transform: uppercase;
     color: #FFFFFF;
+  }
+
+  .logo-login{
+    align-items: center;
+    justify-content: center;
+    align-self: center;
+    height: 30vh;
+    width: auto;
+  }
+  
+  .button-box-login {
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    display: flex;
+    width: 2em;
+    height: 2em;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: opacity 0.4s;
+    border: 2px 0 solid;
+    border-radius: 4px;
+    margin-left: 10px;
+    margin-top: 10px;
   }
 
   @media(max-width: 960px) {
