--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -65,10 +65,11 @@
 }
 
 .Ongsphotos img{
-  width:140px;
+  width:170px;
   height: 100%;
+  background-color: #fff;
   border: 1px solid #544B4B;
-  margin: 0 10px;
+  margin: 0 25px;
   cursor: pointer;
 }
 
@@ -105,7 +106,7 @@
 
 .botoesHome{
   height: 40px;
-  
+  width: auto;
   display: flex;
   align-items: center;
 
@@ -117,7 +118,6 @@
   font-family: 'Poppins';
   padding: 0 20px;
   text-align: center;
-
   border-radius: 400px;
 }
 
