--- a/src/global.css
+++ b/src/global.css
@@ -6,7 +6,19 @@
   box-sizing: border-box;
 }
 
+html{
+  height: 100%;
+  width: 100%;
+}
+
+#root {
+  min-height: 100%;
+  width: 100%;
+}
+
 body{
+  height: 100%;
+  width: 100%;
   font: 400 14px Poppins, sans-serif;
   background: #f0f0f5; 
   -webkit-font-smoothing: antialiased;
