--- a/src/pages/Adm/Profile/styles.css
+++ b/src/pages/Adm/Profile/styles.css
@@ -14,7 +14,7 @@
     height: auto;
 
     border: 2px solid #ddd;
-    /* padding: 20px; */
+    padding: 20px;
     display: flex;
     flex-direction: column;
     border-radius: 15px;
