--- a/src/global.css
+++ b/src/global.css
@@ -7,18 +7,21 @@
 }
 
 html{
-  height: 100%;
-  width: 100%;
+  min-height: 100%;
+  min-width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
 #root {
   min-height: 100%;
-  width: 100%;
+  min-width: 100%;
 }
 
 body{
-  height: 100%;
-  width: 100%;
+  min-height: 100%;
+  min-width: 100%;
   font: 400 14px Poppins, sans-serif;
   background: #f0f0f5; 
   -webkit-font-smoothing: antialiased;
