Transformando card em componente, colocando botão no lugar

--- a/src/components/UserDataCard/InputEditable/styles.css
+++ b/src/components/UserDataCard/InputEditable/styles.css
@@ -9,6 +9,17 @@
     border-top: 0.5px solid #AAA;
 }
 
+.infoEditableLine .infoEditableTitle{
+    margin: 0;
+    width: 30%;
+}
+
+.infoEditableLine .infoEditableContent{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
 .profile .infoEditable input{
     width: 40%;
 }
