--- a/src/pages/Adm/Header/styles.css
+++ b/src/pages/Adm/Header/styles.css
@@ -1,12 +1,13 @@
 .HeaderName{
     width: 100%;
     height: 15vh;
-    background-color: #FFCF4F;
+    background-color: #FFCF4F !important;
+    position: fixed;
 
-    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
+    box-shadow: none !important;
 
     padding: 16px;
     padding-left: 90px;
@@ -23,4 +24,5 @@
     height: 90%;
     width: auto;
     padding: 0;
+    z-index: 9999;
 }
