--- a/src/components/UserDataCard/styles.css
+++ b/src/components/UserDataCard/styles.css
@@ -69,3 +69,9 @@
     justify-content: center;
     align-items: center;
 }
+
+@media(max-width:700px){
+    .profile .cardInfo{
+        width: 90% !important;
+    }
+}
