--- a/src/components/UserDataCard/styles.css
+++ b/src/components/UserDataCard/styles.css
@@ -70,6 +70,11 @@
     align-items: center;
 }
 
+.react-toast-notifications__container{
+    position: fixed;
+    z-index: 100;
+}
+
 @media(max-width:700px){
     .profile .cardInfo{
         width: 90% !important;
