--- a/src/global.css
+++ b/src/global.css
@@ -1,33 +1,43 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap");
 
-*{
+* {
   padding: 0;
   outline: 0;
   box-sizing: border-box;
 }
 
-html{
-  min-height: 100%;
-  min-width: 100%;
+html {
+  min-height: 100vh;
+  min-width: 100vw;
 }
 
 #root {
-  min-height: 100%;
-  min-width: 100%;
+  min-height: 100vh;
+  min-width: 100vw;
 }
 
-body{
-  min-height: 100%;
-  min-width: 100%;
+body {
+  min-height: 100vh;
+  min-width: 100vw;
   font: 400 14px Poppins, sans-serif;
-  background: #f0f0f5; 
+  background: #f0f0f5;
   -webkit-font-smoothing: antialiased;
 }
 
-input,button,textarea{
+input,
+button,
+textarea {
   font: 400 18px Poppins, sans-serif;
 }
 
-button{
+button {
   cursor: pointer;
+}
+
+.loading {
+  display: flex;
+  min-height: 100vh;
+  min-width: 100vw;
+  align-items: center;
+  justify-content: center;
 }
