--- a/src/global.css
+++ b/src/global.css
@@ -22,6 +22,7 @@ body {
   font: 400 14px Poppins, sans-serif;
   background: #f0f0f5;
   -webkit-font-smoothing: antialiased;
+  --main-color: rgba(255, 207, 79);
 }
 
 input,
