--- a/src/pages/Pendings/styles.css
+++ b/src/pages/Pendings/styles.css
@@ -1,141 +1,172 @@
 /*=============================================================
     #CARDS
   ===========================================================*/
-.ONGcard {
-    background-color: #FFCF4F;
-    padding: 3%;
 
+.ONGcard {
+  background-color: #FFCF4F;
+  padding: 3%;
 }
 
 .container {
-    padding: 2px 16px;
-
+  padding: 2px 16px;
 }
-
 
 img {
-    border-radius: 5px 5px 0 0;
-    width: 30%;
-    float: left;
-    padding: 3%;
+  border-radius: 5px 5px 0 0;
+  width: 30%;
+  float: left;
+  padding: 3%;
 }
-
-
-
 
 /* ==========================================================================
    #FONT
    ========================================================================== */
 
 .font-poppins {
-    font-family: "Poppins", "Arial", "Helvetica Neue", sans-serif;
+  font-family: "Poppins", "Arial", "Helvetica Neue", sans-serif;
 }
-
 
 /* ==========================================================================
     #TEXT
   ========================================================================== */
-.pendingsTitle {
-    font-size: 24px;
-    text-transform: uppercase;
-    font-weight: 700;
-    text-align: center;
-    color: black;
 
+.pendingsTitle {
+  font-size: 24px;
+  text-transform: uppercase;
+  font-weight: 700;
+  text-align: center;
+  color: black;
 }
 
 .info {
-    font-size: 20px;
-    font-weight: 700;
-    text-align: left;
-    color: black;
-    font-weight: bold;
-    padding-bottom: 1.5%;
+  font-size: 20px;
+  font-weight: 700;
+  text-align: left;
+  color: black;
+  font-weight: bold;
+  padding-bottom: 1.5%;
 }
 
 .name {
-    font-size: 20px;
-    text-transform: uppercase;
-    text-align: left;
-    color: black;
-    font-weight: bold;
-    padding-bottom: 1.5%;
-    padding-top: 1.5%;
-    padding-left: 1.5%;
+  font-size: 20px;
+  text-transform: uppercase;
+  text-align: left;
+  color: black;
+  font-weight: bold;
+  padding-bottom: 1.5%;
+  padding-top: 1.5%;
+  padding-left: 1.5%;
 }
 
 .style-5 {
-    background: #e5e5e5;
-    text-align: left;
-    line-height: 50px;
-    border-radius: 5px;
-    padding: 0 22px;
-    font-size: 16px;
-    color: #555;
-    width: 100%;
+  background: #e5e5e5;
+  text-align: left;
+  line-height: 50px;
+  border-radius: 5px;
+  padding: 0 22px;
+  font-size: 16px;
+  color: #555;
+  width: 100%;
 }
 
-
-  .forms-row {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -moz-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    margin-bottom: 40px;
-  }
+.forms-row {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-bottom: 40px;
+}
 
 /* ==========================================================================
     #GRID
   ========================================================================== */
 
-  .ONGgrid {
-    transition: 0.3s;
-    width: 100%;
-    padding: 2%;
-
+.ONGgrid {
+  transition: 0.3s;
+  width: 100%;
+  padding: 2%;
 }
-
 
 .gridCard1 {
-    justify-content: center;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    padding-left: 3%;
-    padding-right: 3%;
-    padding-top: 5%;
-    padding-bottom: 5%;
+  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding-left: 3%;
+  padding-right: 3%;
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 
-  .m-rg-20 {
-    margin-right: 20px;
-  }
+.m-rg-20 {
+  margin-right: 20px;
+}
 
-  .m-lt-20 {
-    margin-left: 20px;
-  }
+.m-lt-20 {
+  margin-left: 20px;
+}
 
-#btt{ text-align: center;}
-  .btn1 {
-    display: inline-block;
-    line-height: 50px;
-    padding: 0 50px;
-    -webkit-transition: all 0.4s ease;
-    -o-transition: all 0.4s ease;
-    -moz-transition: all 0.4s ease;
-    transition: all 0.4s ease;
-    cursor: pointer;
-    font-size: 15px;
-    text-transform: uppercase;
-    font-weight: 700;
-    color: #fff;
-    font-family: Poppins;
-  }
+#btt {
+  text-align: center;
+}
+
+.btn1 {
+  display: inline-block;
+  line-height: 50px;
+  padding: 0 50px;
+  -webkit-transition: all 0.4s ease;
+  -o-transition: all 0.4s ease;
+  -moz-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+  cursor: pointer;
+  font-size: 15px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #fff;
+  font-family: Poppins;
+}
+
+/* Novo Pendings */
+
+
+/* HEADER */
+.adminHeader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 15vh;
+  max-height: 18vh;
+  min-width: 100vw;
+  background-color: var(--main-color);
+  padding: 1vh;
+}
+
+.adminHeader p {
+  color: #fff;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 900;
+  font-size: 1.5em;
+  margin-bottom: 0;
+}
+
+.adminHeader img {
+  min-height: 50%;
+  max-height: 70%;
+  width: auto;
+  margin-right: 5vw;
+  padding: 1vh;
+}
+
+/* CONTENT */
+.adminContent {
+  display: flex;
+  height: 100%;
+}
