--- a/src/global.css
+++ b/src/global.css
@@ -1,28 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap");
 
-* {
-  padding: 0;
-  outline: 0;
-  box-sizing: border-box;
-}
-
-html {
-  min-height: 100vh;
-  min-width: 100vw;
-}
-
-#root {
-  min-height: 100vh;
-  min-width: 100vw;
+html, #root, body {
+  height: 100%;
+  width: 100%;
 }
 
 body {
-  min-height: 100vh;
-  min-width: 100vw;
   font: 400 14px Poppins, sans-serif;
   background: #f0f0f5;
   -webkit-font-smoothing: antialiased;
   --main-color: rgba(255, 207, 79);
+  --main-gray: #555;
 }
 
 input,
