--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -144,7 +144,7 @@
 
 .rootContainer{
   padding: 16px;
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
