--- a/src/pages/OngShow/Pages/Desktop/styles.sass
+++ b/src/pages/OngShow/Pages/Desktop/styles.sass
@@ -1,10 +1,10 @@
 .Desktop
-    background-color: #ffcf4f
+    background-color: var(--main-color)
     height: 100%
     width: 100%
 
 .DesktopInside
-    background-color: #ffcf4f
+    background-color: var(--main-color)
     height: 100%
     width: 100%
     display: flex
@@ -12,7 +12,7 @@
     align-items: center
 
 .ong
-    background-color: #ffff
+    background-color: var(--medium-gray)f
     min-height: 80%
     max-height: 90%
     overflow: auto
