--- a/src/components/AdmMenu/Header/styles.css
+++ b/src/components/AdmMenu/Header/styles.css
@@ -1,7 +1,7 @@
 .HeaderName{
     width: 100%;
     height: 15vh;
-    background-color: #FFCF4F !important;
+    background-color: var(--main-color) !important;
     position: fixed;
 
     display: flex;
