--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Raleway:wght@500;900&display=swap');
 
 .subTitle {
-  color: #fff;
+  color: var(--medium-gray);
   font-family: 'Permanent Marker', cursive;
   font-size: calc(1.3em + 2vw);
   opacity: 1;
@@ -13,7 +13,7 @@
 
 .mainTitle{
   font-size: calc(2em + 5vw);
-  color: #fff;
+  color: var(--medium-gray);
   font-family: 'Raleway', sans-serif;
   font-weight: 900;
   text-align: center;
@@ -22,7 +22,7 @@
 }
 
 .overlay{
-  background-color: rgba(255, 207, 79);
+  background-color: var(--main-color);
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -67,7 +67,7 @@
 .Ongsphotos img{
   width:170px;
   height: 100%;
-  background-color: #fff;
+  background-color: var(--medium-gray);
   border: 1px solid #544B4B;
   margin: 0 25px;
   cursor: pointer;
@@ -94,7 +94,7 @@
 /* .buttonText{
   text-align: center;
   font-size: calc(1em + 1vw);
-  color: #fff;
+  color: var(--medium-gray);
   font-size: 15px;
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
@@ -114,7 +114,7 @@
   font-size: 16px;
   text-transform: uppercase;
   font-weight: 700;
-  color: #fff;
+  color: var(--medium-gray);
   font-family: 'Poppins';
   padding: 0 20px;
   text-align: center;
@@ -126,7 +126,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #fff;
+  color: var(--medium-gray);
   /* font-family: 'Permanent Marker', cursive; */
   position: absolute;
   bottom: 0px;
@@ -134,7 +134,7 @@
 }
 
 .saibaMais span{
-  color: #fff;
+  color: var(--medium-gray);
   font-family: 'Permanent Marker', cursive;
   margin-bottom: -10px;
   /* position: absolute; */
@@ -204,7 +204,7 @@
 .Toolbar{
   justify-content: space-evenly;
   background-color: #2C67E4;
-  color: #ffff
+  color: var(--medium-gray)f
 }
 
 .highlight{
