--- a/src/pages/List/styles.css
+++ b/src/pages/List/styles.css
@@ -12,7 +12,7 @@
   font-size: 15px;
   text-transform: uppercase;
   font-weight: 700;
-  color: #fff;
+  color: var(--medium-gray);
   font-family: Poppins;
   padding: 0 50px;
   line-height: 50px;
@@ -33,7 +33,7 @@
 @media screen and (max-width: 1000px) {
   .header {
     padding: 20px 0;
-    background: #ffcf4f;
+    background: var(--main-color);
     height: auto;
     min-height: 150px;
   }
@@ -47,7 +47,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: #ffcf4f;
+  background: var(--main-color);
   height: auto;
   min-height: 150px;
 }
@@ -62,11 +62,11 @@
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
-  background: #fff;
+  background: var(--medium-gray);
 }
 
 .card-5 {
-  background: #fff;
+  background: var(--medium-gray);
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
@@ -79,7 +79,7 @@
   background-color: #cfa944;
   width: 100%;
   padding: 10px;
-  color: #fff;
+  color: var(--medium-gray);
   text-align: center;
   display: flex;
 }
@@ -243,7 +243,7 @@ input {
   font-size: 15px;
   text-transform: uppercase;
   font-weight: 700;
-  color: #fff;
+  color: var(--medium-gray);
   font-family: Poppins;
   padding: 10px 25px 10px 25px;
   align-items: center;
