--- a/src/pages/Login/styles.css
+++ b/src/pages/Login/styles.css
@@ -15,7 +15,7 @@
 }
 
 .loginContent .loginBox {
-  background-color: #ffcf4f;
+  background-color: var(--main-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 15px;
   display: flex;
@@ -23,7 +23,7 @@
 }
 
 .loginContent .loginBox .loginText {
-  color: #FFFFFF;
+  color: var(--medium-gray);
   display: flex;
   font-family: Poppins;
   font-style: normal;
@@ -38,12 +38,12 @@
 }
 
 .usuario {
-  background-color: #FFFFFF;
+  background-color: var(--medium-gray);
   border-radius: 5px;
 }
 
 .senha {
-  background-color: #FFFFFF;
+  background-color: var(--medium-gray);
   border-radius: 5px;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -64,7 +64,7 @@
   line-height: 16px;
   letter-spacing: 0.02em;
   text-transform: uppercase;
-  color: #FFFFFF;
+  color: var(--medium-gray)FFF;
 }
 
 .logo-login {
