--- a/src/pages/Pendings/styles.css
+++ b/src/pages/Pendings/styles.css
@@ -3,7 +3,7 @@
   ===========================================================*/
 
 .ONGcard {
-  background-color: #FFCF4F;
+  background-color: var(--main-color);
   padding: 3%;
 }
 
@@ -130,14 +130,14 @@ img {
   font-size: 15px;
   text-transform: uppercase;
   font-weight: 700;
-  color: #fff;
+  color: var(--medium-gray);
   font-family: Poppins;
 }
 
 /* Novo Pendings */
 .adminPage {
   height: 100%;
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -149,13 +149,13 @@ img {
   justify-content: center;
   min-height: 15vh;
   max-height: 18vh;
-  min-width: 100vw;
+  width: 100%;
   background-color: var(--main-color);
   padding: 1vh;
 }
 
 .adminHeader p {
-  color: #fff;
+  color: var(--medium-gray);
   font-family: 'Raleway', sans-serif;
   font-weight: 900;
   font-size: 1.5em;
@@ -179,7 +179,7 @@ img {
 }
 
 .adminContent .adminTitle p {
-  color: var(--main-gray);
+  color: var(--dark-gray);
   font-family: 'Raleway', sans-serif;
   font-size: 1.5em;
   font-weight: 900;
@@ -190,6 +190,7 @@ img {
   flex: 0 1 auto;
   min-height: 100%;
   min-width: 100%;
-  background-color: #cccccc;
-  
+  background-color: var(--light-gray);
+  border-radius: 0.5em;
+  padding: 1.5em;
 }
