--- a/src/pages/Register/styles.css
+++ b/src/pages/Register/styles.css
@@ -107,7 +107,7 @@
   height: auto;
   visibility: hidden;
   background-color: #555;
-  color: #fff;
+  color: var(--medium-gray);
   text-align: center;
   padding: 10px 10px;
   border-radius: 6px;
@@ -508,7 +508,7 @@
   font-size: 10px;
   text-transform: uppercase;
   font-weight: 700;
-  color: #fff;
+  color: var(--medium-gray);
   font-family: Poppins;
 }
   
@@ -804,12 +804,12 @@
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
-    background: #fff;
+    background: var(--medium-gray);
   }
 
   
   .card-5 {
-    background: #fff;
+    background: var(--medium-gray);
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     border-radius: 10px;
@@ -820,7 +820,7 @@
   
   .card-5 .card-heading {
     padding: 20px 0;
-    background: #FFCF4F;
+    background: var(--main-color);
     -webkit-border-top-left-radius: 10px;
     -moz-border-radius-topleft: 10px;
     border-top-left-radius: 10px;
