--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Raleway:wght@500;900&display=swap');
 
 .subTitle {
-  color: var(--medium-gray);
+  color: #fff;
   font-family: 'Permanent Marker', cursive;
   font-size: calc(1.3em + 2vw);
   opacity: 1;
@@ -13,7 +13,7 @@
 
 .mainTitle{
   font-size: calc(2em + 5vw);
-  color: var(--medium-gray);
+  color: #fff;
   font-family: 'Raleway', sans-serif;
   font-weight: 900;
   text-align: center;
@@ -67,7 +67,7 @@
 .Ongsphotos img{
   width:170px;
   height: 100%;
-  background-color: var(--medium-gray);
+  background-color: #fff;
   border: 1px solid #544B4B;
   margin: 0 25px;
   cursor: pointer;
