--- a/src/pages/List/styles.css
+++ b/src/pages/List/styles.css
@@ -153,7 +153,7 @@ input {
   left: 0;
   height: 20px;
   width: 20px;
-  background-color: #e5e5e5;
+  background-color: #fff;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
@@ -169,7 +169,7 @@ input {
 }
 
 .input--style-5 {
-  background: #e5e5e5;
+  background: #fff;
   line-height: 50px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -180,7 +180,7 @@ input {
 }
 
 .input--style-6 {
-  background: #e5e5e5;
+  background: #fff;
   line-height: 50px;
   padding: 0 22px;
   font-size: 16px;
@@ -243,13 +243,11 @@ input {
   font-size: 15px;
   text-transform: uppercase;
   font-weight: 700;
-  color: var(--medium-gray);
+  color: #fff;
   font-family: Poppins;
   padding: 10px 25px 10px 25px;
   align-items: center;
   justify-content: center;
-  
-
 }
 
 .header-buttons{
