--- a/src/pages/Pendings/styles.css
+++ b/src/pages/Pendings/styles.css
@@ -140,6 +140,7 @@ img {
   width: 100%;
   display: flex;
   flex-direction: column;
+  font-family: 'Raleway', sans-serif;
 }
 
 /* HEADER */
@@ -152,11 +153,12 @@ img {
   width: 100%;
   background-color: var(--main-color);
   padding: 1vh;
+  position: sticky;
+  position: -webkit-sticky;
 }
 
 .adminHeader p {
-  color: var(--medium-gray);
-  font-family: 'Raleway', sans-serif;
+  color: #fff;
   font-weight: 900;
   font-size: 1.5em;
   margin-bottom: 0;
@@ -169,6 +171,9 @@ img {
   padding: 1vh;
 }
 
+.adminHeader .adminLogout {
+  margin-right: 5vw;
+}
 /* CONTENT */
 .adminContent {
   display: flex;
@@ -180,17 +185,82 @@ img {
 
 .adminContent .adminTitle p {
   color: var(--dark-gray);
-  font-family: 'Raleway', sans-serif;
   font-size: 1.5em;
   font-weight: 900;
+}
+
+.adminContent .adminHint {
+  color: var(--medium-gray);
+  font-size: 1em;
+  font-weight:600;
+  min-width: 100%;
+  padding-left: 3em;
 }
 
 .adminContent .adminSpace {
   display: flex;
   flex: 0 1 auto;
-  min-height: 100%;
   min-width: 100%;
-  background-color: var(--light-gray);
+  background-color: var(--medium-gray);
   border-radius: 0.5em;
   padding: 1.5em;
+  align-items: center;
+  justify-content: center;
 }
+
+.adminContent .adminSpace .pendingOngs{
+  display: inline-grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  column-gap: 16px;
+  row-gap: 16px;
+  color: #fff;
+  font-size: 1.3em;
+  font-weight: 600;
+}
+
+/* CARD */
+.cardContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  background-color: var(--light-gray);
+  border-radius: 0.5em;
+  padding: 0.5em 1.5em;
+  box-shadow: 2px 2px 2px rgb(207, 207, 207);
+  cursor: pointer;
+  opacity: 0.8;
+  transition: 0.5s;
+}
+
+.cardContainer:hover{
+  opacity: 1;
+}
+
+.cardContainer .userImgContainer {
+  width: 100%;
+}
+
+.cardName {
+  font-size: 1.2em;
+  font-weight: 600;
+  max-height: 120px;
+  text-overflow: clip;
+  margin-bottom: 8px;
+  overflow: hidden;
+}
+
+.cardDescription {
+  margin-top: 4px;
+  margin-bottom: 16px;
+  
+  font-size: 0.8em;
+  font-weight: 400;
+  max-height: 250px;
+  overflow: auto;
+}
+
+.cardContainer .cardName, .cardDescription{
+  color: var(--dark-gray);
+}
+
